feat: add Swagger docs for get post endpoint
